<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sjors.mrpotatohead.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:id="@+id/relativeLayout"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arms"
            android:visibility="invisible"
            android:id="@+id/arms_image"
            android:contentDescription="@string/arms_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/body"
            android:visibility="visible"
            android:contentDescription="@string/body_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ears"
            android:visibility="invisible"
            android:id="@+id/ears_image"
            android:contentDescription="@string/ears_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eyebrows"
            android:visibility="invisible"
            android:id="@+id/eyebrows_image"
            android:contentDescription="@string/eyebrows_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eyes"
            android:visibility="invisible"
            android:id="@+id/eyes_image"
            android:contentDescription="@string/eyes_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/glasses"
            android:id="@+id/glasses_image"
            android:visibility="invisible"
            android:contentDescription="@string/glasses_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hat"
            android:visibility="invisible"
            android:id="@+id/hat_image"
            android:contentDescription="@string/hat_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mouth"
            android:visibility="invisible"
            android:id="@+id/mouth_image"
            android:contentDescription="@string/mouth_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mustache"
            android:visibility="invisible"
            android:id="@+id/mustache_image"
            android:contentDescription="@string/mustache_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nose"
            android:visibility="invisible"
            android:id="@+id/nose_image"
            android:contentDescription="@string/nose_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shoes"
            android:visibility="invisible"
            android:id="@+id/shoes_image"
            android:contentDescription="@string/shoes_desc"/>

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="@string/arms_checkbox"
                android:id="@+id/arms_checkbox"
                android:onClick="armsCheckBoxIsClicked"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/hat_checkbox"
                android:id="@+id/hat_checkbox"
                android:onClick="hatCheckBoxIsClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="@string/ears_checkbox"
                android:id="@+id/ears_checkbox"
                android:onClick="earsCheckBoxIsClicked"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/mouth_checkbox"
                android:id="@+id/mouth_checkbox"
                android:onClick="mouthCheckBoxIsClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="@string/eyebrows_checkbox"
                android:id="@+id/eyebrows_checkbox"
                android:onClick="eyebrowsCheckBoxIsClicked"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/mustache_checkbox"
                android:id="@+id/mustache_checkbox"
                android:onClick="mustacheCheckBoxIsClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="@string/eyes_checkbox"
                android:id="@+id/eyes_checkbox"
                android:onClick="eyesCheckBoxIsClicked"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/nose_checkbox"
                android:id="@+id/nose_checkbox"
                android:onClick="noseCheckBoxIsClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="@string/glasses_checkbox"
                android:id="@+id/glasses_checkbox"
                android:onClick="glassesCheckBoxIsClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1" />

            <CheckBox
                android:text="@string/shoes_checkbox"
                android:id="@+id/shoes_checkbox"
                android:onClick="shoesCheckBoxIsClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>


</RelativeLayout>
